trustfall_core/test_data/tests/parse_errors/variable_in_root_query.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: $max) {
        num: value @output
    }
}"#,
    arguments: {
        "max": 3
    },
)
